@startuml
skinparam classAttributeIconSize 0
class Biblioteca {
    + logotipo: String
    + site: String
}
class Entidade {
    - nome: String
    - telefone: String
    - e_mail: String
    - aniversario: Date
    - nif: Integer
    - data_criacao: Date
    + registar_pessoa()
    + registar_endereco()
}
class Endereco {
    - morada: String
    - cidade: String
    - codigo_postal: String
    - pais: String
}
class Pessoa {
    - sexo: String
    - doc_identificacao: String
    - tipo_doc_identificacao: String
    - tipo_pessoa: String
    - tipo_acesso: String
    - dados_acesso: String
}
class Bibliotecario {
    - identificacao: String
    + registar_itembiblioteca()
    + registar_biblioteca()
    + registar_entidade()
    + gerar_relatorio()
    + gerar_devolucao()
    + registar_reserva()
}
class Aluno {
    - matricula: String
}
class Professor {
    - departamento: String
}
class Utilizador {
    - tipo: String
}

class ItemBiblioteca {
    - num_inventario: String
    - ident_item: String
    - data_entrada: Date
    - titulo: String
    - descricao: String
    - tipo_item: String
    - imagem: String
    - ano_publicacao: Integer
    - estado_exemplar: String
    + calcular_ident_item()
    + registar_indice()
    + registar_interveniente()
    + registar_autor()
    + registar_tema()
    + emprestar()
    + devolver()
    + consultar_disponibilidade()
    + registar_idioma()
    + registar_editora()
    + registar_estante()
}
class Categoria_Genero {
    - nome_cat_genero: String
}
class Tema {
    - nome_tema: String
}
class Interveniente {
    - num_interveniente: String
    - nome_interveniente: String
    - descricao_interveniente: String
    - tipo_interveniente: String
}
class Idioma {
    - abreviatura: String
    - nome_idioma: String
}
class Estante {
    - identificacao_estante: String
}

class Indice {
    - tipo_indice: String
    - descricao_indice
    + apurados_tema()
    + apurados_idioma()
    + apurados_editora()
    + apurados_tipo_item()
    + apurados_titulo()
    + apurados_ident_item()
}
class Emprestimo {
    - data_emprestimo: Date
    - data_prevista_devolucao: Date
    - data_devolucao: Date
    + realizar_emprestimo()
    + registar_devolucao()
}

class Reserva {
    - data_pedido_reserva: Date
    - data_mudanca_estado: Date
    - estado_reserva: String
}

class Relatorio {
    - num_relatorio: Integer
    - tipo_relatorio: String
    - data_geracao: Date
    + gerar_relatorio()
}

Bibliotecario --> ItemBiblioteca : "1..*"
Bibliotecario --> Entidade : "0..*"
Biblioteca --> ItemBiblioteca : "0..*"
Entidade --> Pessoa: "0..*"
Entidade --|> Biblioteca: "1"
Entidade --> Endereco: "0..*"
ItemBiblioteca *-- Indice: "1..*"
ItemBiblioteca *-- Categoria_Genero: "1..*"
ItemBiblioteca *-- Tema: "1..*"
ItemBiblioteca --> Emprestimo : "1"
ItemBiblioteca --> Reserva: "1..*"
ItemBiblioteca *-- Idioma: "0..1"
ItemBiblioteca --> Estante: "1"
ItemBiblioteca --> Interveniente:"1..*"
Bibliotecario --|> Pessoa
Aluno --|> Pessoa
Professor --|> Pessoa
Utilizador --|> Pessoa
ItemBiblioteca --> Relatorio: "0..*"
@enduml
